@@ -4,6 +4,8 @@ ChangeLog for pommed
 version 1.25:
 	- pommed: check current hardware backlight level before setting AC
 	or battery level. Do not act if the backlight is off.
+	- pommed: do not reject the Apple Bluetooth keyboard because of
+	advertised EV_ABS events.
 
 version 1.24:
 	- pommed: add new path for fnmode setting for 2.6.28.
